# compresstimator

./: Cargo.toml  README.md
examples/: compresstimate.rs
src/: lib.rs  main.rs
